--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,9 @@
         }
     ],
     "require": {
-        "php": ">=7.0",
+        "php": ">=7.1",
         "facebook/webdriver": "^1.5",
-        "symfony/process": "^3.1 || ^4.0"
+        "symfony/process": "^3.1 || ^4.0 || ^5.0"
     },
     "require-dev": {
         "phpunit/phpunit": ">=6.0",
